<resources>
    <string name="app_name">ScraApp</string>
    
    <!--activity_home.xml-->
    <string name="confirm_pickup">CONFIRM PICKUP</string>
    <string name="pickup_address">Pick up Address</string>
    <string name="set_your_location">Set your Location</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="api_key">AIzaSyCFpYOkbt8Oi92RZ0OLwYqKE5IxE0otbPI</string>

    <string name="accept">ACCEPT</string>
    <string name="not_now">NOT NOW</string>

    <string name="plastics">Plastics</string>
    <string name="iron">Iron</string>
    <string name="papers">Papers</string>
    <string name="others">Others</string>
    <string name="confirm">Confirm</string>

    <string name="user_name_mob_no">User name / Mobile no.</string>
    <string name="user_name">User name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="pan_number">PAN No.(Optional)</string>
    <string name="adhar_number">Adhar No.(Optional)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="new_customer">New customer?</string>
    <string name="new_vendor">New Vendor?</string>
    <string name="new_user">New User?</string>
    <string name="forget_password">Forget password</string>
    <string name="vendor">Vendor</string>

    <string name="fill_mandatory_field">Fill mandatory field(s)</string>
    <string name="field_empty">Field is empty</string>
    <string name="password_mismatch">Password Mismatch!</string>
    <string name="error_no_internet">Check your network connection</string>
    <string name="error_server_problem">Server problem. Try later.</string>
    <string name="loading">Loading …</string>
    <string name="signedin">Signed In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="address">Address</string>

    // Dialog
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="need_to_access_your_location">We need to access your location for providing exact result for you.</string>
    <string name="permission">Permission</string>
    <string name="settings">Settings</string>
    <string name="loc_permission_denied">Location Permission denied.</string>

    <string name="approximate">Approximate</string>
    <string name="give_your_approximate_value">Approximate value enough for us.</string>
    
    <string name="successful">Successful!</string>
    <string name="your_order_has_been_placed">Your order has been placed successfully. We will contact you shortly!</string>

    // Signout dialog
    <string name="signout">Logout!</string>
    <string name="do_you_wish_to_logout">Do you wish to Logout?</string>

    <string name="new_customer_registration">New customer registration</string>
    <string name="new_vendor_registration">New vendor registeration</string>
    <string name="my_orders">My Orders</string>
    <string name="signout_menu">Signout</string>
    <string name="no_orders">No Orders</string>
    <string name="un_password_incorrect">user name or password incorrect</string>
    <string name="try_again_later">Please try again later</string>


</resources>
