<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/signup_layout_vendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.scraapp.utility.ScraAppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_text_small"
            android:gravity="center"
            android:text="@string/new_vendor_registration"
            android:textColor="@color/white" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/shop_name"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/et_login_bg"
            android:hint="@string/user_name"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/shop_addresss"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/address"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/email_signup_vendor"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/mobile_signup_vendor"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/pan_number"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/adhar_number"
            android:inputType="text"
            android:maxLength="10"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/adhar_number"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/pan_number"
            android:inputType="text"
            android:maxLength="10"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/password_signup_vendor"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppEdittext
            android:id="@+id/confirm_password_signup_vendor"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/et_login_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:text="" />

        <com.scraapp.utility.ScraAppButton
            android:id="@+id/signup_cta_vendor"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_xmedium"
            android:background="@drawable/et_login_bg"
            android:padding="@dimen/padding_medium"
            android:text="@string/sign_up" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>