<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding_xxmedium"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/dim_10">

            <com.scraapp.utility.ScraAppTextInputEdittext
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:hint="@string/user_name_mob_no"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:text=""
                android:layout_marginTop="@dimen/dim_5"/>

        </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <include layout="@layout/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/dim_10">

            <com.scraapp.utility.ScraAppTextInputEdittext
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="@dimen/padding_xsmall"
                android:hint="@string/password"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:text="" />

        </android.support.design.widget.TextInputLayout>


        <com.scraapp.utility.ScraAppTextView
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:paddingStart="@dimen/dim_10"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="@string/un_password_incorrect"
            android:visibility="gone">

        </com.scraapp.utility.ScraAppTextView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.scraapp.utility.ScraAppTextView
                android:id="@+id/new_customer_cta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_user"
                android:layout_marginTop="@dimen/padding_small"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_xsmall" />

            <com.scraapp.utility.ScraAppTextView
                android:id="@+id/forget_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forget_password"
                android:layout_marginTop="@dimen/padding_small"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_xxsmall"
                android:visibility="invisible"/>

        </LinearLayout>

        <com.scraapp.utility.ScraAppButton
            android:id="@+id/login_cta"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/padding_xmedium"
            android:background="@drawable/bg_login_button"
            android:padding="@dimen/padding_medium"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:enabled="false"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>