<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.scraapp.utility.ScraAppButton
        android:id="@+id/confirm_pickup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm_pickup"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:layout_alignParentBottom="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--<fragment
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.scraapp.HomeActivity" />-->

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/locationMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/locationMarkertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_map"
                android:gravity="center"
                android:minWidth="250dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/set_your_location"
                android:textColor="@android:color/white"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imageMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_marker" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/light_gray">

    <ImageView
        android:id="@+id/hamburger_menu"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="-10dp"
        android:src="@drawable/iconfinder_menu"
        android:tint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <com.scraapp.utility.ScraAppTextView
        android:id="@+id/pickup_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pickup_address"
        android:maxLines="1"
        android:layout_toEndOf="@id/hamburger_menu"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="10dp" />

    </LinearLayout>



</RelativeLayout>